--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,159 @@
     <title>Document</title>
 </head>
 <body>
-    HI, My PORTFOLIO
+   <div class="main-body">
+    <div class="name-text">
+        <h2>Hi ,I am</h2>
+    <pre id="name"> <b>
+         _____                        __  .__    .__ __            
+        /     \   ____   ____________/  |_|  |__ |__|  | _______   
+       /  \ /  \_/ __ \_/ __ \_  __ \   __\  |  \|  |  |/ /\__  \  
+      /    Y    \  ___/\  ___/|  | \/|  | |   Y  \  |    <  / __ \_
+      \____|__  /\___  >\___  >__|   |__| |___|  /__|__|_ \(____  /
+              \/     \/     \/                 \/        \/     \/ 
+    </b>
+            </h1>
+            <div class="visit-links">
+                <a href="#">Github</a>
+                <a href="#">LinkedIn</a>
+                <a href="#">LeetCode</a>
+                <a href="#">Dev.to</a>
+              </div>
+   </div>
+
+   <div class="terminal">
+    <div class="skills">
+        <div class="skill-set">
+            <h5>
+                <b>Languages: </b>Golang, Java <br>
+                    </h5>
+            <h5 id="tools"><b>Tools: </b>Docker, Kubernetes, Redis, Ngnix, Jenkins, Terraform</h5>
+        </div>
+       </div>
+       
+       <div class="card-container">
+        <div class="card1">
+            <h3>Projects</h3>
+        </div>
+        <div class="card">
+          <h3>GO Scheduler</h3>
+          <p>This project emulates Go's runtime scheduler and models goroutines using its M:N scheduler.</p>
+          <div class="card-links">
+            <a href="#">Github</a>
+          </div>
+        </div>
+        <div class="card">
+          <h3>Code Runner</h3>
+          <p>This project allows users to submit code via frontend and compiles in Docker + Redis Queue.</p>
+          <div class="card-links">
+            <a href="#">Github</a>
+          </div>
+        </div>
+        <div class="card">
+          <h3>Potato Blogs</h3>
+          <p>A simple blog application - create and view blogs through API endpoints.</p>
+          <div class="card-links">
+            <a href="#">Github</a>
+          </div>
+        </div>
+      </div>
+      <div class="card-container">
+        <div class="card1">
+            <h3></h3>
+        </div>
+        <div class="card">
+          <h3>Cloud Abstractor</h3>
+          <p>This is a lightweight Go application that enables deployment across multiple cloud Platforms.</p>
+          <div class="card-links">
+            <a href="#">Github</a>
+          </div>
+        </div>
+        <div class="card">
+          <h3>IPFS Blockchain</h3>
+          <p>This project connects and Uploads files to IPFS and retrieves its unique CID (Content Identifier).</p>
+          <div class="card-links">
+            <a href="#">Github</a>
+          </div>
+        </div>
+        <div class="card">
+          <h3>ServerHealth-CLI</h3>
+          <p>A Go CLI app that simulates checking the response time of multiple servers using goroutines.</p>
+          <div class="card-links">
+            <a href="#">Github</a>
+          </div>
+        </div>
+      </div>
+      <br>
+   </div>
+
+<br>
+   <div class="card-container">
+    <div class="card2">
+        <h3 style="margin-top: 5px;">View Blogs@</h3>
+    </div>
+    <div class="card2">
+        <div class="card-links">
+          <a href="#" style="color: black;"><b>Why Goroutines Are So Lightweight</b></a>
+        </div>
+    </div>
+    <div class="card2">
+        <div class="card-links">
+          <a href="#" style="color: black;"><b>Subnets- Creating a Go Subnet Planner</b></a>
+        </div>
+    </div>
+    <div class="card2">
+        <div class="card-links">
+          <a href="#" style="color: black;"><b>Routing</b></a>
+        </div>
+    </div>
+    <br>
+</div>
+
+<div class="terminal">
+    <div class="skills">
+        <div class="skill-set">
+            <h5>
+                <b>Open Source Contributions: </b>Social Summer of Code (2025) <br>
+                    </h5>
+        </div>
+       </div>
+    <div class="card-container" style="background-color: black;" >
+        <div class="card1">
+            <h3>Hackathon Wins</h3>
+        </div>
+        <div class="card">
+          <h3>TechDivathon - Winner (Feb 2025)</h3>
+        </div>
+        <div class="card">
+          <h3>Buildathon - Winner (March 2025)</h3>
+        </div>
+        <div class="card">
+            <h3>CloudNova - Winner (April 2025))</h3>
+          </div>
+        </div>
+      </div>
+    <div class="card-container" style="background-color: black; color: greenyellow; margin-top: -65px;"  >
+        <div class="card1">
+            <h3></h3>
+        </div>
+        <div class="card3">
+          <h3>Hack The Horizon - CyberSecurity Top 2 (March 2025)</h3>
+        </div>
+        <div class="card3">
+          <h3>Thinkathon - Winner (October 2024)</h3>
+        </div>
+        <div class="card3">
+            <h3>Codefrei AI - Runner (March 2025)</h3>
+          </div>
+        </div>
+    </div>
+</div>
+</div>
+
+<div class="footer">
+    <br>
+</div>
+
+    
 </body>
 </html>
