--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,176 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 body{
-    font-size: 100px;
+    background: linear-gradient(to right, rgb(1, 214, 1), yellowgreen);
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    padding: 0;
+    margin: 0;
+
 }
+
+h5{
+    font-weight:500 ;
+}
+
+.skills{
+    display: flex;
+    justify-content: center;
+}
+
+.skill-set{
+    text-align: left;
+    font-size: 14px;
+    margin: 0px;
+    padding: 0px;
+    gap: 0px;
+}
+
+#tools{
+    margin-top: -5px;
+}
+
+.terminal{
+    background-color: black;
+    color:greenyellow ;
+    padding: 20px;
+}
+
+
+.main-body{
+    text-align: center;
+}
+
+
+
+.name-text {
+    width: 100%;
+    overflow-x: auto; /* Just in case it's still too wide on small screens */
+  }
+
+  #name {
+    color:black;
+    font-size: 10px;
+    margin-top: -20px;
+    white-space: pre-wrap; /* Allow wrapping instead of scrolling */
+  }
+
+    .title{
+        display: flex;
+        justify-content: center;
+        text-align: left;
+    }
+
+    .title h3{
+        text-align: left;
+    }
+    
+
+  .card-container, .title{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    text-align:left ;
+  }
+
+  .card{
+    font-size: 10px;
+    width: 100px;
+    height: 120px;
+    padding: 5px;
+  }
+
+  .card a{
+    color:greenyellow ;
+    font-weight: bolder;
+  }
+
+  .card1{
+    font-size: 10px;
+    width: 100px;
+    height: 100px;
+    padding: 5px;
+  }
+
+    .card2{
+        font-size: 10px;
+    width: 100px;
+    height: 50px;
+    padding: 5px;
+    }
+
+    .card3{
+        color: yellowgreen;
+    font-size: 10px;
+    width: 100px;
+    height: 100px;
+    padding: 5px;
+    }
+
+  .visit-links{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+
+  .open p, .open a{
+    font-size: 14px;
+}
+
+  .visit-links a{
+    color: black;
+  }
+
+  .blogs{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .blogs h3, .blogs a{
+    font-size: 14px;
+    color: black;
+  }
+
+  @media (max-width: 600px) {
+    #name {
+      font-size: 5px; /* Larger font size on very small screens for readability */
+    }
+    .card-container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .visit-links a{
+        font-size: 8px;
+    }
+    .card1{
+    height: 0px;
+    }
+    .skill-set{
+        text-align: center;
+        font-size: 11px;
+    }
+    .card{
+        height: 80px;
+    }
+    .card2{
+        height: 10px;
+    }
+
+    .cardh3, .card p, .card a{
+        font-size: 8px;
+    }
+
+    .open p, .open a{
+        font-size: 8px;
+    }
+  }
+
+
+
+  
