--- a/templates/index.html
+++ b/templates/index.html
@@ -18,13 +18,7 @@
       \____|__  /\___  >\___  >__|   |__| |___|  /__|__|_ \(____  /
               \/     \/     \/                 \/        \/     \/ 
     </b>
-            </h1>
-            <div class="visit-links">
-                <a href="#">Github</a>
-                <a href="#">LinkedIn</a>
-                <a href="#">LeetCode</a>
-                <a href="#">Dev.to</a>
-              </div>
+        <h3>Gopher | B.E (Hons) CSE'27 | Gold Medalist (9.4 CGPA)</h3>
    </div>
 
    <div class="terminal">
@@ -115,49 +109,69 @@
     <br>
 </div>
 
+
 <div class="terminal">
     <div class="skills">
         <div class="skill-set">
             <h5>
-                <b>Open Source Contributions: </b>Social Summer of Code (2025) <br>
+                <b>OpenSource Contributions: </b>Social Summer of Code (2025) <br>
                     </h5>
         </div>
        </div>
-    <div class="card-container" style="background-color: black;" >
+       
+       <div class="card-container">
         <div class="card1">
-            <h3>Hackathon Wins</h3>
+            <h3>Hacakthon Wins</h3>
         </div>
-        <div class="card">
-          <h3>TechDivathon - Winner (Feb 2025)</h3>
+        <div class="card3">
+          <h3>TechDivathon -Winner
+            <br>[Feb 2025]
+          </h3>
         </div>
-        <div class="card">
-          <h3>Buildathon - Winner (March 2025)</h3>
+        <div class="card3">
+          <h3>Buildathon -Winner
+            <br>[March 2025]
+          </h3>
         </div>
-        <div class="card">
-            <h3>CloudNova - Winner (April 2025))</h3>
-          </div>
+        <div class="card3">
+            <h3>CloudNova -Winner
+                <br>[April 2025]
+              </h3>
         </div>
       </div>
-    <div class="card-container" style="background-color: black; color: greenyellow; margin-top: -65px;"  >
+      <div class="card-container">
         <div class="card1">
             <h3></h3>
         </div>
         <div class="card3">
-          <h3>Hack The Horizon - CyberSecurity Top 2 (March 2025)</h3>
+            <h3>Hack The Horizon Cybersecurity Top 2
+                <br>[March 2025]
+              </h3>
         </div>
         <div class="card3">
-          <h3>Thinkathon - Winner (October 2024)</h3>
+            <h3>Thinkathon -Winner
+                <br>[Dec 2024]
+              </h3>
         </div>
         <div class="card3">
-            <h3>Codefrei AI - Runner (March 2025)</h3>
-          </div>
+            <h3>CodefreiAI -Runner
+                <br>[March 2025]
+              </h3>
         </div>
-    </div>
-</div>
-</div>
+      </div>
+      <br>
+   </div>
 
 <div class="footer">
     <br>
+    <div class="visit-links">
+        <a href="#">Github</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">LeetCode</a>
+        <a href="#">Dev.to</a>
+      </div>
+
+      <br>
 </div>
 
     
