--- a/templates/index.html
+++ b/templates/index.html
@@ -162,8 +162,11 @@
       <br>
    </div>
 
+
+
 <div class="footer">
     <br>
+    <h3>Connect With Me</h3>
     <div class="visit-links">
         <a href="#">Github</a>
         <a href="#">LinkedIn</a>
