--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,22 @@ body{
 
 }
 
+
+.image{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+}
+
+.image h3{
+    font-size: 10px;
+}
+img{
+    width: 40px;
+    height: 40px;
+
+}
 h5{
     font-weight:500 ;
 }
