--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
    <div class="main-body">
+    <div class="image">
+        <img src="/static/images/go.png" alt="My Image" width="300">
+        <h3>Written in GO</h3>
+      </div>
     <div class="name-text">
         <h2>Hi ,I am</h2>
     <pre id="name"> <b>
