--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css">
-    <title>Document</title>
+    <title>Meerthika</title>
 </head>
 <body>
    <div class="main-body">
@@ -43,21 +43,21 @@
           <h3>GO Scheduler</h3>
           <p>This project emulates Go's runtime scheduler and models goroutines using its M:N scheduler.</p>
           <div class="card-links">
-            <a href="#">Github</a>
+            <a href="https://github.com/mery-top/GO-Scheduler">Github</a>
           </div>
         </div>
         <div class="card">
           <h3>Code Runner</h3>
           <p>This project allows users to submit code via frontend and compiles in Docker + Redis Queue.</p>
           <div class="card-links">
-            <a href="#">Github</a>
+            <a href="https://github.com/mery-top/go_CodeRunner">Github</a>
           </div>
         </div>
         <div class="card">
           <h3>Potato Blogs</h3>
           <p>A simple blog application - create and view blogs through API endpoints.</p>
           <div class="card-links">
-            <a href="#">Github</a>
+            <a href="https://github.com/mery-top/go_blogs">Github</a>
           </div>
         </div>
       </div>
@@ -69,21 +69,21 @@
           <h3>Cloud Abstractor</h3>
           <p>This is a lightweight Go application that enables deployment across multiple cloud Platforms.</p>
           <div class="card-links">
-            <a href="#">Github</a>
+            <a href="https://github.com/mery-top/go_multi_cloud">Github</a>
           </div>
         </div>
         <div class="card">
           <h3>IPFS Blockchain</h3>
           <p>This project connects and Uploads files to IPFS and retrieves its unique CID (Content Identifier).</p>
           <div class="card-links">
-            <a href="#">Github</a>
+            <a href="https://github.com/mery-top/go_ipfs">Github</a>
           </div>
         </div>
         <div class="card">
           <h3>ServerHealth-CLI</h3>
           <p>A Go CLI app that simulates checking the response time of multiple servers using goroutines.</p>
           <div class="card-links">
-            <a href="#">Github</a>
+            <a href="https://github.com/mery-top/go_serverHealth_CLI">Github</a>
           </div>
         </div>
       </div>
@@ -97,17 +97,17 @@
     </div>
     <div class="card2">
         <div class="card-links">
-          <a href="#" style="color: black;"><b>Why Goroutines Are So Lightweight</b></a>
+          <a href="https://dev.to/meerthika/go-scheduler-understanding-why-goroutines-are-so-lightweight-3ka8" style="color: black;"><b>Why Goroutines Are So Lightweight</b></a>
         </div>
     </div>
     <div class="card2">
         <div class="card-links">
-          <a href="#" style="color: black;"><b>Subnets- Creating a Go Subnet Planner</b></a>
+          <a href="https://dev.to/meerthika/subnets-2i3b" style="color: black;"><b>Subnets- Creating a Go Subnet Planner</b></a>
         </div>
     </div>
     <div class="card2">
         <div class="card-links">
-          <a href="#" style="color: black;"><b>Routing</b></a>
+          <a href="https://dev.to/meerthika/routing-10l7" style="color: black;"><b>Routing</b></a>
         </div>
     </div>
     <br>
@@ -172,10 +172,10 @@
     <br>
     <h3>Connect With Me</h3>
     <div class="visit-links">
-        <a href="#">Github</a>
-        <a href="#">LinkedIn</a>
-        <a href="#">LeetCode</a>
-        <a href="#">Dev.to</a>
+        <a href="https://github.com/mery-top">Github</a>
+        <a href="https://www.linkedin.com/in/meerthika/">LinkedIn</a>
+        <a href="https://leetcode.com/u/mery_top/">LeetCode</a>
+        <a href="https://dev.to/meerthika">Dev.to</a>
       </div>
 
       <br>
