--- a/templates/index.html
+++ b/templates/index.html
@@ -6,181 +6,182 @@
     <link rel="stylesheet" href="/static/style.css">
     <title>Meerthika</title>
 </head>
-<body>
-   <div class="main-body">
-    <div class="image">
-        <img src="/static/images/go.png" alt="My Image" width="300">
-        <h3>Written in GO</h3>
-      </div>
-    <div class="name-text">
-        <h2>Hi ,I am</h2>
-    <pre id="name"> <b>
-         _____                        __  .__    .__ __            
-        /     \   ____   ____________/  |_|  |__ |__|  | _______   
-       /  \ /  \_/ __ \_/ __ \_  __ \   __\  |  \|  |  |/ /\__  \  
-      /    Y    \  ___/\  ___/|  | \/|  | |   Y  \  |    <  / __ \_
-      \____|__  /\___  >\___  >__|   |__| |___|  /__|__|_ \(____  /
-              \/     \/     \/                 \/        \/     \/ 
-    </b>
-        <h3>Gopher | B.E (Hons) CSE'27 | Gold Medalist (9.4 CGPA)</h3>
-   </div>
-
-   <div class="terminal">
-    <div class="skills">
-        <div class="skill-set">
-            <h5>
-                <b>Languages: </b>Golang, Java <br>
-                    </h5>
-            <h5 id="tools"><b>Tools: </b>Docker, Kubernetes, Redis, Ngnix, Jenkins, Terraform</h5>
+<div class="scale-container">
+    <body>
+        <div class="main-body">
+         <div class="image">
+             <img src="/static/images/go.png" alt="My Image" width="300">
+             <h3>Written in GO</h3>
+           </div>
+         <div class="name-text">
+             <h2>Hi ,I am</h2>
+         <pre id="name" style="text-align: center;"> <b>
+            ███╗   ███╗███████╗███████╗██████╗ ████████╗██╗  ██╗██╗██╗  ██╗ █████╗ 
+            ████╗ ████║██╔════╝██╔════╝██╔══██╗╚══██╔══╝██║  ██║██║██║ ██╔╝██╔══██╗
+            ██╔████╔██║█████╗  █████╗  ██████╔╝   ██║   ███████║██║█████╔╝ ███████║
+            ██║╚██╔╝██║██╔══╝  ██╔══╝  ██╔══██╗   ██║   ██╔══██║██║██╔═██╗ ██╔══██║
+            ██║ ╚═╝ ██║███████╗███████╗██║  ██║   ██║   ██║  ██║██║██║  ██╗██║  ██║
+            ╚═╝     ╚═╝╚══════╝╚══════╝╚═╝  ╚═╝   ╚═╝   ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
+                                                                                   
+            
+         </b>
+             <h3 style="text-align: center;">Gopher | B.E (Hons) CSE'27 | Gold Medalist (9.4 CGPA)</h3>
         </div>
-       </div>
-       
-       <div class="card-container">
-        <div class="card1">
-            <h3>Projects</h3>
+     
+        <div class="terminal">
+         <div class="skills">
+             <div class="skill-set">
+                 <h5>
+                     <b>Languages: </b>Golang, Java <br>
+                         </h5>
+                 <h5 id="tools"><b>Tools: </b>Docker, Kubernetes, Redis, Ngnix, Jenkins, Terraform</h5>
+             </div>
+            </div>
+            
+            <div class="card-container">
+             <div class="card1">
+                 <h3>Projects</h3>
+             </div>
+             <div class="card">
+               <h3>GO Scheduler</h3>
+               <p>This project emulates Go's runtime scheduler and models goroutines using its M:N scheduler.</p>
+               <div class="card-links">
+                 <a href="https://github.com/mery-top/GO-Scheduler">Github</a>
+               </div>
+             </div>
+             <div class="card">
+               <h3>Code Runner</h3>
+               <p>This project allows users to submit code via frontend and compiles in Docker + Redis Queue.</p>
+               <div class="card-links">
+                 <a href="https://github.com/mery-top/go_CodeRunner">Github</a>
+               </div>
+             </div>
+             <div class="card">
+               <h3>Potato Blogs</h3>
+               <p>A simple blog application - create and view blogs through API endpoints.</p>
+               <div class="card-links">
+                 <a href="https://github.com/mery-top/go_blogs">Github</a>
+               </div>
+             </div>
+           </div>
+           <div class="card-container">
+             <div class="card1">
+                 <h3></h3>
+             </div>
+             <div class="card">
+               <h3>Cloud Abstractor</h3>
+               <p>This is a lightweight Go application that enables deployment across multiple cloud Platforms.</p>
+               <div class="card-links">
+                 <a href="https://github.com/mery-top/go_multi_cloud">Github</a>
+               </div>
+             </div>
+             <div class="card">
+               <h3>IPFS Blockchain</h3>
+               <p>This project connects and Uploads files to IPFS and retrieves its unique CID (Content Identifier).</p>
+               <div class="card-links">
+                 <a href="https://github.com/mery-top/go_ipfs">Github</a>
+               </div>
+             </div>
+             <div class="card">
+               <h3>ServerHealth-CLI</h3>
+               <p>A Go CLI app that simulates checking the response time of multiple servers using goroutines.</p>
+               <div class="card-links">
+                 <a href="https://github.com/mery-top/go_serverHealth_CLI">Github</a>
+               </div>
+             </div>
+           </div>
+           <br>
         </div>
-        <div class="card">
-          <h3>GO Scheduler</h3>
-          <p>This project emulates Go's runtime scheduler and models goroutines using its M:N scheduler.</p>
-          <div class="card-links">
-            <a href="https://github.com/mery-top/GO-Scheduler">Github</a>
-          </div>
+     
+     <br>
+        <div class="card-container">
+         <div class="card2">
+             <h3 style="margin-top: 5px;">View Blogs@</h3>
+         </div>
+         <div class="card2">
+             <div class="card-links">
+               <a href="https://dev.to/meerthika/go-scheduler-understanding-why-goroutines-are-so-lightweight-3ka8" style="color: black;"><b>Why Goroutines Are So Lightweight</b></a>
+             </div>
+         </div>
+         <div class="card2">
+             <div class="card-links">
+               <a href="https://dev.to/meerthika/subnets-2i3b" style="color: black;"><b>Subnets- Creating a Go Subnet Planner</b></a>
+             </div>
+         </div>
+         <div class="card2">
+             <div class="card-links">
+               <a href="https://dev.to/meerthika/routing-10l7" style="color: black;"><b>Routing</b></a>
+             </div>
+         </div>
+         <br>
+     </div>
+     
+     
+     <div class="terminal">
+         <div class="skills">
+             <div class="skill-set">
+                 <h5>
+                     <b>OpenSource Contributions: </b>Social Summer of Code (2025) <br>
+                         </h5>
+             </div>
+            </div>
+            
+            <div class="card-container">
+             <div class="card1">
+                 <h3>Hacakthon Wins</h3>
+             </div>
+             <div class="card3">
+               <h3>TechDivathon -Winner
+                 <br>[Feb 2025]
+               </h3>
+             </div>
+             <div class="card3">
+               <h3>Buildathon -Winner
+                 <br>[March 2025]
+               </h3>
+             </div>
+             <div class="card3">
+                 <h3>CloudNova -Winner
+                     <br>[April 2025]
+                   </h3>
+             </div>
+           </div>
+           <div class="card-container">
+             <div class="card1">
+                 <h3></h3>
+             </div>
+             <div class="card3">
+                 <h3>Hack The Horizon Cybersecurity Top 2
+                     <br>[March 2025]
+                   </h3>
+             </div>
+             <div class="card3">
+                 <h3>Thinkathon -Winner
+                     <br>[Dec 2024]
+                   </h3>
+             </div>
+             <div class="card3">
+                 <h3>CodefreiAI -Runner
+                     <br>[March 2025]
+                   </h3>
+             </div>
+           </div>
+           <br>
         </div>
-        <div class="card">
-          <h3>Code Runner</h3>
-          <p>This project allows users to submit code via frontend and compiles in Docker + Redis Queue.</p>
-          <div class="card-links">
-            <a href="https://github.com/mery-top/go_CodeRunner">Github</a>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Potato Blogs</h3>
-          <p>A simple blog application - create and view blogs through API endpoints.</p>
-          <div class="card-links">
-            <a href="https://github.com/mery-top/go_blogs">Github</a>
-          </div>
-        </div>
-      </div>
-      <div class="card-container">
-        <div class="card1">
-            <h3></h3>
-        </div>
-        <div class="card">
-          <h3>Cloud Abstractor</h3>
-          <p>This is a lightweight Go application that enables deployment across multiple cloud Platforms.</p>
-          <div class="card-links">
-            <a href="https://github.com/mery-top/go_multi_cloud">Github</a>
-          </div>
-        </div>
-        <div class="card">
-          <h3>IPFS Blockchain</h3>
-          <p>This project connects and Uploads files to IPFS and retrieves its unique CID (Content Identifier).</p>
-          <div class="card-links">
-            <a href="https://github.com/mery-top/go_ipfs">Github</a>
-          </div>
-        </div>
-        <div class="card">
-          <h3>ServerHealth-CLI</h3>
-          <p>A Go CLI app that simulates checking the response time of multiple servers using goroutines.</p>
-          <div class="card-links">
-            <a href="https://github.com/mery-top/go_serverHealth_CLI">Github</a>
-          </div>
-        </div>
-      </div>
-      <br>
-   </div>
-
-<br>
-   <div class="card-container">
-    <div class="card2">
-        <h3 style="margin-top: 5px;">View Blogs@</h3>
-    </div>
-    <div class="card2">
-        <div class="card-links">
-          <a href="https://dev.to/meerthika/go-scheduler-understanding-why-goroutines-are-so-lightweight-3ka8" style="color: black;"><b>Why Goroutines Are So Lightweight</b></a>
-        </div>
-    </div>
-    <div class="card2">
-        <div class="card-links">
-          <a href="https://dev.to/meerthika/subnets-2i3b" style="color: black;"><b>Subnets- Creating a Go Subnet Planner</b></a>
-        </div>
-    </div>
-    <div class="card2">
-        <div class="card-links">
-          <a href="https://dev.to/meerthika/routing-10l7" style="color: black;"><b>Routing</b></a>
-        </div>
-    </div>
-    <br>
+     
+     
+     
+     <div class="footer">
+         <br>
+         <h3>Connect With Me</h3>
+         <div class="visit-links">
+             <a href="https://github.com/mery-top">Github</a>
+             <a href="https://www.linkedin.com/in/meerthika/">LinkedIn</a>
+             <a href="https://leetcode.com/u/mery_top/">LeetCode</a>
+             <a href="https://dev.to/meerthika">Dev.to</a>
+           </div>
+     
+           <br>
+     </div>
 </div>
-
-
-<div class="terminal">
-    <div class="skills">
-        <div class="skill-set">
-            <h5>
-                <b>OpenSource Contributions: </b>Social Summer of Code (2025) <br>
-                    </h5>
-        </div>
-       </div>
-       
-       <div class="card-container">
-        <div class="card1">
-            <h3>Hacakthon Wins</h3>
-        </div>
-        <div class="card3">
-          <h3>TechDivathon -Winner
-            <br>[Feb 2025]
-          </h3>
-        </div>
-        <div class="card3">
-          <h3>Buildathon -Winner
-            <br>[March 2025]
-          </h3>
-        </div>
-        <div class="card3">
-            <h3>CloudNova -Winner
-                <br>[April 2025]
-              </h3>
-        </div>
-      </div>
-      <div class="card-container">
-        <div class="card1">
-            <h3></h3>
-        </div>
-        <div class="card3">
-            <h3>Hack The Horizon Cybersecurity Top 2
-                <br>[March 2025]
-              </h3>
-        </div>
-        <div class="card3">
-            <h3>Thinkathon -Winner
-                <br>[Dec 2024]
-              </h3>
-        </div>
-        <div class="card3">
-            <h3>CodefreiAI -Runner
-                <br>[March 2025]
-              </h3>
-        </div>
-      </div>
-      <br>
-   </div>
-
-
-
-<div class="footer">
-    <br>
-    <h3>Connect With Me</h3>
-    <div class="visit-links">
-        <a href="https://github.com/mery-top">Github</a>
-        <a href="https://www.linkedin.com/in/meerthika/">LinkedIn</a>
-        <a href="https://leetcode.com/u/mery_top/">LeetCode</a>
-        <a href="https://dev.to/meerthika">Dev.to</a>
-      </div>
-
-      <br>
-</div>
-
-    
-</body>
 </html>
