--- a/static/style.css
+++ b/static/style.css
@@ -186,6 +186,9 @@ h5{
     .card3{
         height: 20px;
     }
+    #source{
+        font-size: 11px;
+    }
 
     .card3 h3{
         font-size: 9px;
