--- a/templates/index.html
+++ b/templates/index.html
@@ -120,7 +120,7 @@
      <div class="terminal">
          <div class="skills">
              <div class="skill-set">
-                 <h5>
+                 <h5 id="source">
                      <b>OpenSource Contributions: </b>Social Summer of Code (2025) <br>
                          </h5>
              </div>
@@ -128,7 +128,7 @@
             
             <div class="card-container">
              <div class="card1">
-                 <h3>Hacakthon Wins</h3>
+                 <h3>Hackathon Wins</h3>
              </div>
              <div class="card3">
                <h3>TechDivathon -Winner
