--- a/templates/index.html
+++ b/templates/index.html
@@ -15,87 +15,108 @@
            </div>
          <div class="name-text">
              <h2>Hi ,I am</h2>
-         <pre id="name" style="text-align: center;"> <b>
-            ███╗   ███╗███████╗███████╗██████╗ ████████╗██╗  ██╗██╗██╗  ██╗ █████╗ 
-            ████╗ ████║██╔════╝██╔════╝██╔══██╗╚══██╔══╝██║  ██║██║██║ ██╔╝██╔══██╗
-            ██╔████╔██║█████╗  █████╗  ██████╔╝   ██║   ███████║██║█████╔╝ ███████║
-            ██║╚██╔╝██║██╔══╝  ██╔══╝  ██╔══██╗   ██║   ██╔══██║██║██╔═██╗ ██╔══██║
-            ██║ ╚═╝ ██║███████╗███████╗██║  ██║   ██║   ██║  ██║██║██║  ██╗██║  ██║
-            ╚═╝     ╚═╝╚══════╝╚══════╝╚═╝  ╚═╝   ╚═╝   ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
-                                                                                   
-            
-         </b>
+             <div class="ascii-art-container">
+              <img src="/static/images/m2.png" alt="My Image" style="width: 100%; max-width: 300px; height: 70px; display: block; margin: -20px auto;">
+            </div>
+         <pre id="name" style="text-align: center;"> <b>                                                                 
              <h3 style="text-align: center;">Gopher | B.E (Hons) CSE'27 | Gold Medalist (9.4 CGPA)</h3>
+        </pre>
+        <div style="text-align: center; margin-top:-10px; padding:10px;">
+          <button class="button-89">Resume</button>
         </div>
+        
+        </div>
+        
+        
+        <!-- SECTION I -->
      
         <div class="terminal">
-         <div class="skills">
+         <div id="skills" class="skills">
              <div class="skill-set">
                  <h5>
-                     <b>Languages: </b>Golang, Java <br>
+                     <b>Languages: </b>Golang, Java, Python <br>
                          </h5>
-                 <h5 id="tools"><b>Tools: </b>Docker, Kubernetes, Redis, Ngnix, Jenkins, Terraform</h5>
+                 <h5 id="tools"><b>Tools: </b>AWS, SpringBoot, Docker, Redis, Ngnix, Terraform</h5>
+                 <h5 id="tools"><b>CyberTools: </b>GoBuster, Nmap, WireShark</h5>
              </div>
             </div>
+
+            <!-- SECTION II -->
             
-            <div class="card-container">
+            <div class="card-container" >
              <div class="card1">
                  <h3>Projects</h3>
              </div>
              <div class="card">
                <h3>GO Scheduler</h3>
                <p>This project emulates Go's runtime scheduler and models goroutines using its M:N scheduler.</p>
+               <p>Tech: GO</p>
                <div class="card-links">
                  <a href="https://github.com/mery-top/GO-Scheduler">Github</a>
-               </div>
+              </div>
              </div>
+             <br>
              <div class="card">
                <h3>Code Runner</h3>
                <p>This project allows users to submit code via frontend and compiles in Docker + Redis Queue.</p>
+               <p>Tech: GO</p>
                <div class="card-links">
                  <a href="https://github.com/mery-top/go_CodeRunner">Github</a>
                </div>
              </div>
+             <br>
              <div class="card">
                <h3>Potato Blogs</h3>
-               <p>A simple blog application - create and view blogs through API endpoints.</p>
+               <p>A simple blog application - create and view blogs through various API endpoints (CRUD) and DB.</p>
+               <p>Tech: GO</p>
                <div class="card-links">
                  <a href="https://github.com/mery-top/go_blogs">Github</a>
                </div>
              </div>
            </div>
-           <div class="card-container">
+           <div class="card-container" style="margin-top:40px;">
              <div class="card1">
                  <h3></h3>
              </div>
              <div class="card">
                <h3>Cloud Abstractor</h3>
                <p>This is a lightweight Go application that enables deployment across multiple cloud Platforms.</p>
+               <p>Tech: GO</p>
                <div class="card-links">
                  <a href="https://github.com/mery-top/go_multi_cloud">Github</a>
                </div>
              </div>
+             <br>
              <div class="card">
                <h3>IPFS Blockchain</h3>
                <p>This project connects and Uploads files to IPFS and retrieves its unique CID (Content Identifier).</p>
+               <p>Tech: GO</p>
                <div class="card-links">
                  <a href="https://github.com/mery-top/go_ipfs">Github</a>
                </div>
              </div>
+             <br>
              <div class="card">
                <h3>ServerHealth-CLI</h3>
                <p>A Go CLI app that simulates checking the response time of multiple servers using goroutines.</p>
+               <p>Tech: GO</p>
                <div class="card-links">
                  <a href="https://github.com/mery-top/go_serverHealth_CLI">Github</a>
                </div>
              </div>
            </div>
            <br>
-        </div>
-     
+           <br>
+          </div>
+           
+     <!-- SECTION III -->
      <br>
+     
+      
+     </div>
+          
         <div class="card-container">
-         <div class="card2">
+         <div id="blogs" class="card2">
              <h3 style="margin-top: 5px;">View Blogs@</h3>
          </div>
          <div class="card2">
@@ -114,22 +135,14 @@
              </div>
          </div>
          <br>
-     </div>
+        </div>
      
+     <!-- SECTION IV -->
      
      <div class="terminal">
-         <div class="skills">
-             <div class="skill-set">
-                 <h5 id="source">
-                     <b>OpenSource Contributions: </b>Social Summer of Code (2025) <br>
-                         </h5>
-             </div>
-            </div>
+            <h4>6x Hackathon Wins</h4>
             
             <div class="card-container">
-             <div class="card1">
-                 <h3>Hackathon Wins</h3>
-             </div>
              <div class="card3">
                <h3>TechDivathon -Winner
                  <br>[Feb 2025]
@@ -141,37 +154,33 @@
                </h3>
              </div>
              <div class="card3">
-                 <h3>CloudNova -Winner
-                     <br>[April 2025]
-                   </h3>
-             </div>
-           </div>
-           <div class="card-container">
-             <div class="card1">
-                 <h3></h3>
-             </div>
-             <div class="card3">
-                 <h3>Hack The Horizon Cybersecurity Top 2
-                     <br>[March 2025]
-                   </h3>
-             </div>
-             <div class="card3">
-                 <h3>Thinkathon -Winner
-                     <br>[Dec 2024]
-                   </h3>
-             </div>
-             <div class="card3">
-                 <h3>CodefreiAI -Runner
-                     <br>[March 2025]
-                   </h3>
-             </div>
+              <h3>CloudNova -Winner
+                <br>[April 2025]
+              </h3>
+            </div>
+            <div class="card3">
+              <h3>HackTheHorizon - Top2
+                <br>[March 2025]
+              </h3>
+            </div>
+          <div class="card3">
+              <h3>Thinkathon -Winner
+                  <br>[Dec 2024]
+                </h3>
+          </div>
+          <div class="card3">
+              <h3>CodefreiAI -Runner
+                  <br>[March 2025]
+                </h3>
+          </div>
            </div>
            <br>
         </div>
      
      
+       <!-- SECTION V -->
      
-     <div class="footer">
+     <div id="connect" class="footer">
          <br>
          <h3>Connect With Me</h3>
          <div class="visit-links">
