--- a/static/style.css
+++ b/static/style.css
@@ -10,11 +10,12 @@ body{
 
 }
 
+
+
 .scale-container {
     zoom: 2;
   }
   
-
 
 .image{
     display: flex;
@@ -26,6 +27,7 @@ body{
 .image h3{
     font-size: 10px;
 }
+
 img{
     width: 40px;
     height: 40px;
@@ -53,9 +55,10 @@ h5{
 }
 
 .terminal{
+    display: flex;
     background-color: black;
     color:greenyellow ;
-    padding: 20px;
+    padding: 50px;
 }
 
 
@@ -95,13 +98,6 @@ h5{
     justify-content: center;
     align-items: center;
     text-align:left ;
-  }
-
-  .card{
-    font-size: 10px;
-    width: 100px;
-    height: 120px;
-    padding: 5px;
   }
 
   .card a{
@@ -158,21 +154,20 @@ h5{
     color: black;
   }
 
-  @media (max-width: 1000px) {
-    #name {
-      font-size: 6px; /* Larger font size on very small screens for readability */
-    }
-  }
+  
+
 
 
   @media (max-width: 600px) {
     #name {
-      font-size: 3px; /* Larger font size on very small screens for readability */
+      font-size: 2.5px; /* Larger font size on very small screens for readability */
     }
     .card-container{
         flex-direction: column;
         align-items: center;
     }
+
+    
     .visit-links a{
         font-size: 8px;
     }
@@ -182,15 +177,6 @@ h5{
     .skill-set{
         text-align: center;
         font-size: 11px;
-    }
-    .card{
-        height: 80px;
-    }
-    .card2{
-        height: 10px;
-    }
-    .card3{
-        height: 20px;
     }
     #source{
         font-size: 11px;
@@ -219,6 +205,6 @@ h5{
       
   }
 
-
-
+  
+ 
   
