--- a/templates/index.html
+++ b/templates/index.html
@@ -17,16 +17,12 @@
              <h2>Hi ,I am</h2>
              <div class="ascii-art-container">
               <img src="/static/images/m2.png" alt="My Image" style="width: 100%; max-width: 300px; height: 70px; display: block; margin: -20px auto;">
+              <pre id="name" style="text-align: center;"> <b>                                                                 
+                <h3 style="text-align: center;">Gopher | B.E (Hons) CSE'27 | Gold Medalist (9.4 CGPA)</h3>
+           </pre>
+           <button style="width: 100%; max-width: 70px; height: 30px; display: block; margin: 10px auto; color:yellowgreen; background-color:black;">RESUME</button>
+       
             </div>
-         <pre id="name" style="text-align: center;"> <b>                                                                 
-             <h3 style="text-align: center;">Gopher | B.E (Hons) CSE'27 | Gold Medalist (9.4 CGPA)</h3>
-        </pre>
-        <div style="text-align: center; margin-top:-10px; padding:10px;">
-          <button class="button-89">Resume</button>
-        </div>
-        
-        </div>
-        
         
         <!-- SECTION I -->
      
@@ -112,8 +108,6 @@
      <!-- SECTION III -->
      <br>
      
-      
-     </div>
           
         <div class="card-container">
          <div id="blogs" class="card2">
